--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -837,17 +837,57 @@
 
 .ChatRoomContainer main {
   background-color: aquamarine;
-  height: calc(100% - 14.5rem);
+  height: calc(100% - 14.3rem);
 }
 
 .ChatRoomContainer .InputTools {
-  height: 2.5rem;
+  height: 2.4rem;
   background-color: #f7f7f7;
 }
 
 .ChatRoomContainer .Input {
-  height: 6rem;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 5rem;
+      grid-template-columns: 1fr 5rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 5.9rem;
   background-color: white;
+  padding-left: 0.8rem;
+  padding-right: 0.8rem;
+}
+
+.ChatRoomContainer .Input .TextInput {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 0.88rem;
+  height: 90%;
+  outline: none;
+  border: none;
+  resize: none;
+}
+
+.ChatRoomContainer .Input .SendButton {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 4.4rem;
+  background-color: #f1f1f1;
+  border-radius: 5px;
+  border: 1px solid #e0e0e0;
+  color: #c7c7c7;
+  font-size: smaller;
 }
 
 body {
