chatroom inputtools 아이콘 추가, 배치

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,6 +2,7 @@ $brown: rgb(66, 54, 48);
 $black: rgb(64, 64, 64);
 $white: rgb(255, 255, 255);
 $gray: rgb(247,247,247);
+$borderGray: rgb(224, 224, 224);
 $dividerGray: rgb(241, 241, 241);
 $dividerTitle: rgb(154, 154, 154);
 $birthdayPink: rgb(225, 115, 122);
