--- a/src/styles/_chatRoom.scss
+++ b/src/styles/_chatRoom.scss
@@ -17,12 +17,24 @@
 
   main {
     background-color: aquamarine;
-    height: calc(100% - 14.3rem);
+    height: calc(100% - 14.3rem - 1px);
   }
 
   .InputTools {
+    display: grid;
+    grid-template-columns: 2.4rem 2.4rem 2.4rem 1fr 2.4rem 2.4rem;
+    align-items: center;
+    justify-items: center;
     height: 2.4rem;
     background-color: $gray;
+    padding-left: 0.2rem;
+    padding-right: 0.2rem;
+    border-bottom: 1px solid $borderGray;
+
+    img {
+      width: 1.1rem;
+      filter: opacity(.5);
+    }
   }
 
   .Input {
@@ -37,7 +49,6 @@
     .TextInput {
       @include defaultFonts();
       font-size: 0.88rem;
-      // font-weight: 400;
       height: 90%;
       // background-color: blueviolet;
       outline: none;
@@ -50,9 +61,9 @@
       justify-content: center;
       align-items: center;
       height: 4.4rem;
-      background-color: rgb(241, 241, 241);
+      background-color: rgb(249, 249, 249);
       border-radius: 5px;
-      border: 1px solid rgb(224, 224, 224);
+      border: 1px solid $borderGray;
       color: $dimGray;
       font-size: smaller;
     }
