--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -837,12 +837,29 @@
 
 .ChatRoomContainer main {
   background-color: aquamarine;
-  height: calc(100% - 14.3rem);
+  height: calc(100% - 14.3rem - 1px);
 }
 
 .ChatRoomContainer .InputTools {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 2.4rem 2.4rem 2.4rem 1fr 2.4rem 2.4rem;
+      grid-template-columns: 2.4rem 2.4rem 2.4rem 1fr 2.4rem 2.4rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  justify-items: center;
   height: 2.4rem;
   background-color: #f7f7f7;
+  padding-left: 0.2rem;
+  padding-right: 0.2rem;
+  border-bottom: 1px solid #e0e0e0;
+}
+
+.ChatRoomContainer .InputTools img {
+  width: 1.1rem;
+  -webkit-filter: opacity(0.5);
+          filter: opacity(0.5);
 }
 
 .ChatRoomContainer .Input {
@@ -883,7 +900,7 @@
       -ms-flex-align: center;
           align-items: center;
   height: 4.4rem;
-  background-color: #f1f1f1;
+  background-color: #f9f9f9;
   border-radius: 5px;
   border: 1px solid #e0e0e0;
   color: #c7c7c7;
