--- a/src/styles/_chatRoom.scss
+++ b/src/styles/_chatRoom.scss
@@ -16,7 +16,7 @@
   }
 
   main {
-    background-color: aquamarine;
+    background-color: rgb(189, 209, 220);
     height: calc(100% - 14.3rem - 1px);
   }
 
@@ -26,7 +26,7 @@
     align-items: center;
     justify-items: center;
     height: 2.4rem;
-    background-color: $gray;
+    background-color: rgb(248, 248, 248);
     padding-left: 0.2rem;
     padding-right: 0.2rem;
     border-bottom: 1px solid $borderGray;
@@ -42,7 +42,6 @@
     grid-template-columns: 1fr 5rem;
     align-items: center;
     height: 5.9rem;
-    background-color: $white;
     padding-left: 0.8rem;
     padding-right: 0.8rem;
 
