--- a/src/styles/_chatRoom.scss
+++ b/src/styles/_chatRoom.scss
@@ -1,18 +1,116 @@
-
 .ChatRoomContainer {
   display: block;
   height: 100%;
   flex: 1;
-  // background-color: aquamarine;
-
+  
   .Header {
-    @include flexCenter(row);
     @include draggable();
-    justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
     height: 6rem;
-    background-color: azure;
-    
+    background-color: rgb(250, 250, 250);
 
+    .HeaderRow {
+      display: grid;
+      grid-template-columns: 4rem 1fr 8rem;
+      height: 4.4rem;
+      width: 100%;
+
+      .AvatarWrapper {
+        @include flexCenter(column);
+        align-self: center;
+        height: 100%;
+
+        img {
+          width: 2.8rem;
+          border-radius: 40%;
+        }
+      }
+
+      .RoomInfoWrapper {
+        display: grid;
+        grid-template-rows: 1fr 0.6rem 1fr;
+
+        .RoomName {
+          font-family: "Helvetica neue";
+          display: flex;
+          flex: 1;
+          flex-direction: column;
+          justify-content: flex-end;
+          font-size: 0.9rem;
+        }
+
+        .RoomMembers {
+          display: flex;
+          flex-direction: row;
+          align-self: flex-start;
+          font-size: 0.8rem;
+
+          img {
+            align-self: center;
+            width: 0.6rem;
+            height: 0.6rem;
+            filter: opacity(0.5);
+            margin-right: 0.2rem;
+          }
+        }
+      }
+
+      .RoomControllerWrapper {
+        display: grid;
+        grid-template-rows: 1fr 1fr;
+        height: 100%;
+        // background-color:lightgoldenrodyellow;
+
+        .TransparencyControllerWrapper {
+          display: flex;
+          flex-direction: row;
+          justify-content: flex-end;
+          align-items: center;
+          padding-right: 0.6rem;
+          // background-color: lightgreen;
+
+          .TransparencyController {
+            width: 40%;
+            -webkit-app-region: none; // electron drag off
+            -webkit-appearance: none;
+            background: $thickGray;
+            height: 0.1rem;
+            outline: none;
+
+            &::-webkit-slider-thumb {
+              // -webkit-appearance: none;
+              -webkit-app-region: none;
+              -webkit-appearance: none;
+              border: 1px solid $dimGray;
+              height: 0.8rem;
+              width: 0.8rem;
+              border-radius: 50%;
+              background: $gray;
+            }
+          }
+        }
+
+        .RoomControllerButtons {
+          display: grid;
+          padding-right: 0.7rem;
+          grid-template-columns: 1fr 1fr 1fr 1fr;
+          align-items:flex-start;
+          justify-items: center;
+          gap: 0.2rem;
+          // background-color: lightsalmon;
+
+          .RoomControllerButton {
+            width: 0.8rem;
+            padding: 0.3rem;
+            border: 1px solid $dimGray;
+            border-radius: 50%;
+            filter: opacity(0.5);
+          }
+        }
+      }
+    }
   }
 
   main {
@@ -33,7 +131,7 @@
 
     img {
       width: 1.1rem;
-      filter: opacity(.5);
+      filter: opacity(0.5);
     }
   }
 
@@ -49,7 +147,6 @@
       @include defaultFonts();
       font-size: 0.88rem;
       height: 90%;
-      // background-color: blueviolet;
       outline: none;
       border: none;
       resize: none;
