--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,3 +11,4 @@ $dimGray: rgb(199, 199, 199);
 $thickGray: rgb(119, 119, 119);
 $melon: rgb(154, 231, 176);
 $yellow: rgb(250, 225, 1);
+$bubbleYellow: rgb(254, 228, 0);
