--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -12,3 +12,6 @@ $thickGray: rgb(119, 119, 119);
 $melon: rgb(154, 231, 176);
 $yellow: rgb(250, 225, 1);
 $bubbleYellow: rgb(254, 228, 0);
+
+$marginDefault: 0.8rem;
+$paddingDefault: 0.5rem;
