--- a/src/styles/_chatRoom.scss
+++ b/src/styles/_chatRoom.scss
@@ -166,13 +166,35 @@
         display: flex;
         flex-direction: row;
         justify-content: flex-start;
-        align-items: center;
         margin-left: 3rem;
+        margin-right: 2rem;
 
         .Bubble {
           padding-right: 0.8rem;
-          margin-right: 5rem;
           background-color: white;
+        }
+
+        .RightInfos {
+          display: flex;
+          flex-direction: column;
+          justify-content: flex-end;
+          align-items: flex-start;
+          margin-left: 0.5rem;
+          min-width: 3rem;
+
+          .Unreads {
+            justify-self: flex-end;
+            color: $yellow;
+            font-size: 0.6rem;
+          }
+
+          .TimeView {
+            align-self: flex-end;
+            width: 100%;
+            padding-left: 0.2rem;
+            font-size: 0.62rem;
+            color: rgba(0, 0, 0, 0.7);
+          }
         }
 
         &:not(.First)::before {
@@ -185,7 +207,7 @@
 
           border-left: 0.5rem solid transparent;
           border-top: 0.5rem solid white;
-          bottom: 0.3rem;
+          bottom: -0.3rem;
         }
       }
 
@@ -199,13 +221,36 @@
         display: flex;
         flex-direction: row;
         justify-content: flex-end;
-        align-items: center;
         margin-right: 0.5rem;
+        margin-left: 2.5rem;
 
         .Bubble {
           padding-left: 0.8rem;
-          margin-left: 5rem;
           background-color: $bubbleYellow;
+        }
+
+        .LeftInfos {
+          display: flex;
+          flex-direction: column;
+          justify-content: flex-end;
+          justify-items: flex-end;
+          align-items: flex-end;
+          margin-right: 0.5rem;
+          min-width: 3rem;
+
+          .Unreads {
+            justify-self: flex-end;
+            color: $yellow;
+            font-size: 0.6rem;
+          }
+
+          .TimeView {
+            display: flex;
+            justify-content: flex-end;
+            width: 4rem;
+            font-size: 0.64rem;
+            color: rgba(0, 0, 0, 0.7);
+          }
         }
 
         &:not(.First)::after {
@@ -218,7 +263,7 @@
 
           border-right: 0.5rem solid transparent;
           border-top: 0.5rem solid $bubbleYellow;
-          bottom: 0.3rem;
+          bottom: -0.3rem;
           filter: drop-shadow(0 -0.0625rem 0.0625rem rgba(0, 0, 0, 0.1));
         }
       }
