--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1057,16 +1057,46 @@
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   margin-left: 3rem;
+  margin-right: 2rem;
 }
 
 .ChatRoomContainer main.Chats .BubbleWrapper.Left .Bubble {
   padding-right: 0.8rem;
-  margin-right: 5rem;
   background-color: white;
+}
+
+.ChatRoomContainer main.Chats .BubbleWrapper.Left .RightInfos {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  margin-left: 0.5rem;
+  min-width: 3rem;
+}
+
+.ChatRoomContainer main.Chats .BubbleWrapper.Left .RightInfos .Unreads {
+  justify-self: flex-end;
+  color: #fae101;
+  font-size: 0.6rem;
+}
+
+.ChatRoomContainer main.Chats .BubbleWrapper.Left .RightInfos .TimeView {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  width: 100%;
+  padding-left: 0.2rem;
+  font-size: 0.62rem;
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .ChatRoomContainer main.Chats .BubbleWrapper.Left:not(.First)::before {
@@ -1079,7 +1109,7 @@
   position: relative;
   border-left: 0.5rem solid transparent;
   border-top: 0.5rem solid white;
-  bottom: 0.3rem;
+  bottom: -0.3rem;
 }
 
 .ChatRoomContainer main.Chats .BubbleWrapper .Bubble {
@@ -1099,16 +1129,50 @@
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   margin-right: 0.5rem;
+  margin-left: 2.5rem;
 }
 
 .ChatRoomContainer main.Chats .BubbleWrapper.Right .Bubble {
   padding-left: 0.8rem;
-  margin-left: 5rem;
   background-color: #fee400;
+}
+
+.ChatRoomContainer main.Chats .BubbleWrapper.Right .LeftInfos {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  justify-items: flex-end;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  margin-right: 0.5rem;
+  min-width: 3rem;
+}
+
+.ChatRoomContainer main.Chats .BubbleWrapper.Right .LeftInfos .Unreads {
+  justify-self: flex-end;
+  color: #fae101;
+  font-size: 0.6rem;
+}
+
+.ChatRoomContainer main.Chats .BubbleWrapper.Right .LeftInfos .TimeView {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  width: 4rem;
+  font-size: 0.64rem;
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .ChatRoomContainer main.Chats .BubbleWrapper.Right:not(.First)::after {
@@ -1121,7 +1185,7 @@
   position: relative;
   border-right: 0.5rem solid transparent;
   border-top: 0.5rem solid #fee400;
-  bottom: 0.3rem;
+  bottom: -0.3rem;
   -webkit-filter: drop-shadow(0 -0.0625rem 0.0625rem rgba(0, 0, 0, 0.1));
           filter: drop-shadow(0 -0.0625rem 0.0625rem rgba(0, 0, 0, 0.1));
 }
