채팅방 선택여부 redux로 관리, 더블클릭시 ipc통신으로 새로운 윈도우 열기

--- a/src/styles/_chat.scss
+++ b/src/styles/_chat.scss
@@ -71,6 +71,10 @@
       grid-template-columns: 3rem 1fr 4.2rem;
       height: 3.5rem;
       
+      &.Selected {
+        background-color: rgba(0, 0, 0, 0.05);
+      }
+
       &:hover {
         background-color: $gray;
       }
