friendTabSlice 추가, 더블클릭시 채팅윈도우 연결

--- a/src/styles/_friend.scss
+++ b/src/styles/_friend.scss
@@ -130,6 +130,10 @@
       height: 3.4rem;
       padding: 0.2rem;
 
+      &.Selected {
+        background-color: rgba(0, 0, 0, 0.05);
+      }
+
       &:hover {
         background-color: $gray;
       }
