--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -289,6 +289,10 @@
   padding: 0.2rem;
 }
 
+.FriendTabContainer main .UserItem.Selected {
+  background-color: rgba(0, 0, 0, 0.05);
+}
+
 .FriendTabContainer main .UserItem:hover {
   background-color: #f7f7f7;
 }
